--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 addons:
   sonarcloud:
-    organization: "CoffeeCodeSWE"
+    organization: "coffeecodeswe"
 
 script:
   - yarn install
-  - sonar-scanner -Dsonar.login=$SONAR_TOKEN -Dsonar.projectKey=this-is-a-CI-test
+  - sonar-scanner -Dsonar.login=$SONAR_TOKEN -Dsonar.projectKey=CoffeeCodeSWE_this-is-a-CI-test
